test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/cast_to_array_type_3.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: arr
                  None: 
                  Array: 
                    TLong: 6
                    Long: 
                  None: 
            CS: 
              CReturn: 
                CCast: 
                  CVar: 
                    TIdentifier: arr
                    None: 
                  Array: 
                    TLong: 2
                    Array: 
                      TLong: 3
                      Long: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
